# Art

./: CMakeLists.txt  README.md  UIElement.h  UIPanel.cpp  UIPanel.h  button.cpp  button.h  canvas.cpp  canvas.h  cell.cpp  cell.h  colorButton.cpp  colorButton.h  constants.h  idea.txt  main.cpp
test/: CMakeLists.txt  tests.cpp
